--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 <body>
   <main>
     <img src="./avatar-jessica.jpeg" alt="a black girl" class="profile-pic">
-    <h2 class="name">Jessica Randall</h2>
-    <h3 class="location">London, United Kingdom</h3>
+    <h1 class="name">Jessica Randall</h1>
+    <h2 class="location">London, United Kingdom</h2>
     <p class="job">"Front-end developer and avid reader."</p>
     <div class="social-links">
-      <button><a href="https://github.com/mohamedabdelhamedramdam">GitHub</a></button>
-      <button><a href="https://www.frontendmentor.io/profile/mohamedabdelhamedramdam">Frontend Mentor</button></a>
-      <button><a href="https://www.linkedin.com/in/mohamad-abdelhamed-49090619b/">LinkedIn</a></button>
-      <button><a href="#">Twitter</a></button>
-      <button><a href="#">Instagram</a></button>
+      <a href="https://github.com/mohamedabdelhamedramdam">GitHub</a>
+      <a href="https://www.frontendmentor.io/profile/mohamedabdelhamedramdam">Frontend Mentor</a>
+      <a href="https://www.linkedin.com/in/mohamad-abdelhamed-49090619b/">LinkedIn</a>
+      <a href="#">Twitter</a>
+      <a href="#">Instagram</a>
       </ul>
   </main>
 
